# Jarvis-x

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
config/: jarvis_config.yaml
jarvis/: __init__.py  __main__.py
jarvis/ai/: __init__.py  model_router.py
jarvis/ai/providers/: __init__.py  base.py  groq_provider.py  ollama_provider.py  openrouter_provider.py
jarvis/api/: __init__.py  main.py
jarvis/core/: __init__.py  config.py  orchestrator.py
jarvis/memory/: __init__.py  long_term.py  memory_manager.py  short_term.py
jarvis/voice/: audio_stream.py  stt_engine.py  tts_engine.py  voice_assistant.py
scripts/: download_vosk_model.sh
