[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-x"
version = "0.1.0"
description = "Next-gen AI assistant — modular, offline-capable, multilingual (EN/UZ)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "groq>=0.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psutil>=5.9.0",
    "websockets>=12.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
memory = [
    "chromadb>=0.5.0",
]
voice = [
    "vosk>=0.3.45",
    "pyttsx3>=2.90",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.scripts]
jarvis = "jarvis.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
